//// -- LEVEL 1
//// -- Tables and References

enum Gender {
  male
  female
  other
}

enum UserType {
  hoc_vien
  giang_vien
  admin
}

enum Action {
  created
  read 
  update 
  deleted
  manage
  access_api
}

Table PhanQuyen {
  id_role varchar [pk]
  mo_ta varchar
  action Action
}

Table Role {
  id_role varchar [pk]
  mo_ta varchar
  quyen varchar[]
}

Table PhienDangNhap {
  id int [pk, increment]
  user_name varchar
  token varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timtimestamp
}

// Creating tables
Table HocVien {
  id int [pk, increment] // auto-increment
  ho_ten varchar
  id_khoa int [ref: > Khoa.id]
  id_chuyen_nganh int [ref: > ChuyenNganh.id]
  id_info int [ref: > Info.id]
  diem_dau_vao float
  mon_hoc_bo_sung varchar
  trang_thai varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timtimestamp
}

Table GiangVien {
  id int [pk, increment]
  ho_ten varchar
  id_khoa int [ref: > Khoa.id]
  id_info int [ref: - Info.id]
  trang_thai varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timtimestamp
}

Table Info {
  id int [pk, increment]
  user_name varchar
  password varchar
  quyen longtext
  ngay_sinh datetime
  gioi_tinh Gender
  dien_thoai varchar
  email varchar
  dia_chi varchar
}

Table HocPhan {
  id int [pk, increment]
  name varchar
  so_tin_chi int
  ma_chuyen_nganh vachar [ref: < ChuyenNganh.id]
  created_at timestamp
  updated_at timestamp
  deleted_at timtimestamp
}

Table Khoa {
  id varchar [pk]
  ten_khoa varchar
  truong_khoa varchar
  dien_thoai varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timtimestamp
}

Table ChuyenNganh {
  id varchar [pk]
  ten_chuyen_nganh varchar
  id_khoa int [ref: > Khoa.id]
  created_at timestamp
  updated_at timestamp
  deleted_at timtimestamp
}

Table LopHocPhan {
  id int [pk, increment]
  id_mon int [ref: > HocPhan.id]
  id_giang_vien int
  list_hoc_vien longtext
  created_at timestamp
  updated_at timestamp
  deleted_at timtimestamp
}

Table BangDiem {
  id_hoc_vien int [pk, ref: > HocVien.id]
  id_mon int [pk, ref: > HocPhan.id]
  diem_x float
  diem_y float
  diem_btl float
  diem_z float
  du_dieu_kien boolean
}

Table ThongBao {
  id_thong_bao int [pk, increment]
  id_loai_thong_bao int
  tieu_de varchar
  noi_dung varchar
  file_dinh_kem varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timtimestamp
} 

Table PhanLop {
  id_lop varchar [pk, ref: > LopHocPhan.id]
  id_hoc_vien int [pk, ref: > HocVien.id]
  is_active boolean
}

Table LoaiThongBao {
  id varchar [pk, increment]
  mo_ta varchar
}







